--- a/frontend/src/pages/LandingPage/LandingPage.css
+++ b/frontend/src/pages/LandingPage/LandingPage.css
@@ -15,6 +15,48 @@
   align-items: center;
 }
 
+.current-challenge {
+  width: 90vw;
+  height: 250px;
+  background-color: #101726;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  border-radius: 10px;
+  box-shadow: 0 0 7px 2px black;
+  position: relative;
+}
+
+.challenge-name {
+  margin: 10px;
+  padding: 0;
+  color: #49F2C2;
+}
+
+.current-challenge p {
+  padding: 0;
+  margin: 0;
+  color: white;
+}
+
+.hover-image {
+  position: absolute;
+  background-color: black;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  -webkit-transition: opacity 0.5s ease-in-out;
+  -moz-transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.5s ease-in-out;
+  border-radius: 10px;
+}
+
+.hover-image:hover {
+  opacity: 0.9;
+}
 
 @media (min-width: 600px) {
 
@@ -25,5 +67,8 @@
     margin-top: 4rem;
   }
   
+  .current-challenge {
+    width: 500px;
+  }
 
 }
