--- a/frontend/src/pages/ChallengePage/challengePage.css
+++ b/frontend/src/pages/ChallengePage/challengePage.css
@@ -37,11 +37,12 @@
   border: none;
   outline: none;
   height: 40px;
-  width: 20vw;
+  width: 50%;
   border-radius: 4px;
   background-color: #0D0D26;
   color: white;
   border-radius: 10px;
+  margin: 10px auto;
 }
 
 .challenge-name-form button {
@@ -94,7 +95,6 @@
   border: none;
   border-bottom: 2px solid #555;
   width: 80%;
-  margin: 10px 8%;
   outline: none;
 }
 
@@ -104,10 +104,6 @@
 
 .form-card label {
   padding: 10px 8%;
-}
-
-.add-commit-button {
-  margin: 10px 8%;
 }
 
 #submit-button {
@@ -121,6 +117,68 @@
   text-align: center;
 }
 
+.existing-challenge {
+  background-color: #101726;
+  width: 90vw;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 15px;
+  color: white;
+}
+
+.existing-challenge button {
+  background-color: #43D9BD;
+  color: black;
+  font-size: 17px;
+}
+
+.challenge-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.challenge-card .challenge-title {
+  border-bottom: 1px solid #49F2C2;
+  color: #49F2C2;
+}
+
+.challenge-card p {
+  margin: 0;
+}
+
+.commitments {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+.commitments h2 {
+  color: #49F2C2;
+}
+
+.commitments form input {
+  width: 100%;
+  height: 40px;
+  border-radius: 20px;
+  border: none;
+  margin: 5px auto;
+  padding-left: 20px;
+  outline: none;
+  box-sizing: border-box;
+}
+
+.existing-challenge .delete-button {
+  background-color: rgb(214, 77, 55);
+  margin-bottom: 20px;
+}
+
 @media screen and (min-width: 700px) {
   #challenge-page {
     width: 580px;
@@ -129,6 +187,10 @@
   }
 
   .form-card, #submit-button {
+    width: 580px;
+  }
+
+  .existing-challenge {
     width: 580px;
   }
 }
