--- a/frontend/src/pages/CommitmentPage/commitmentPage.css
+++ b/frontend/src/pages/CommitmentPage/commitmentPage.css
@@ -4,6 +4,35 @@
   border-radius: 15px;
   padding: 20px;
   box-sizing: border-box;
+  box-shadow: 0px 0px 10px #49F2C2;
+  margin: 0 auto;
+}
+
+.modal-list-item {
+  list-style-type: none;
+}
+
+.modal-list {
+  padding: 0;
+  margin: 0;
+}
+
+.modal-button {
+  width: 75%;
+  height: 30px;
+  margin-bottom: 10px;
+  border: none;
+  border-radius: 15px;
+}
+
+.modal-button:hover {
+  outline: none;
+  background-color: #49F2C2;
+}
+
+.modal-button:active {
+  background-color: #2fa886;
+  outline: none;
 }
 
 .drop-down-item {
