--- a/frontend/src/pages/RegistrationPage/RegistrationPage.css
+++ b/frontend/src/pages/RegistrationPage/RegistrationPage.css
@@ -6,7 +6,7 @@
 }
 
 #registerForm {
-  background-color: #f5f5dc;
+  background-color: #101726;
   width: 100vw;
   padding: 1rem;
   display: flex;
@@ -16,7 +16,7 @@
 }
 
 #registerForm .fa-user-circle {
-  color: #0D0D26;
+  color: #49F2C2;
   margin-top: 0.5rem;
 }
 
@@ -24,7 +24,7 @@
   font-family: 'Lora', serif;
   font-size: 2rem;
   font-weight: 700;
-  color: #333333;
+  color: #49F2C2;
   text-align: center;
 }
 
@@ -41,7 +41,7 @@
 }
 
 #registerForm input:focus {
-  box-shadow: 0 0 5px #0D0D26; 
+  box-shadow: 0 0 5px 1px #49F2C2; 
   border: 1px solid #0D0D26;
   outline-offset: 0px !important;
   outline: none !important;
@@ -52,7 +52,7 @@
   display: block;
   text-align: left;
   margin-top: 0.5rem;
-  color:  #333333;
+  color:  white;
   font-weight: 700;
 }
 
@@ -63,7 +63,7 @@
 .strengthWord {
   font-family: 'Alegreya', serif;
   font-weight: 700;
-  color:#333333 !important;
+  color:white !important;
 }
 
 #registerForm label:first-of-type {
@@ -86,9 +86,10 @@
 
   #registerForm {
     width: 400px;
-    border-radius: 3rem;
+    border-radius: 15px;
     margin-top: 0.5rem;
-    box-shadow: 0.25rem 0 0.5rem #0D0D26; 
+    margin-bottom: 0.5rem;
+    box-shadow: 0rem 0 0.5rem #49F2C2; 
     border: 1px solid #0D0D26;
     min-height: fit-content;
   }
